adding lots of files

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,6 @@
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
-    <string name="main_title">Choose Active Abilities</string>
+    <string name="main_title">Encounters</string>
     <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
 </resources>
